--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,6 @@
 		<p>Tiramisu <b>v{{ version }} "{{ codename }}"</b> - <b>{{ tiramisudate }}</b> · 
 		Flask <b>v{{ flaskver }}</b> · 
 		Python <b>v{{ pythonver }}</b><p>
-	<p>Copyright © 2021 floraphile. All rights reserved. Terms of Service. Privacy Policy.</p>
+	<p>Copyright © 2021 <a href='/p/floraphile'>floraphile</a>. All rights reserved. Terms of Service. Privacy Policy.</p>
 	</div>
 </html>
