MAYBE - search bar overhaul, colored karma

--- a/templates/base.html
+++ b/templates/base.html
@@ -108,13 +108,13 @@
         Level <b>{{ level }} {{ multiplier }}</b> / <b>{{ levelProgress }}%</b> to <b>{{ levelplusone }}</b><br>
 
         <!--- KARMA --->
-        karma is <b>{{ reqList }}</b><br>
+        karma is <b class='pink'>{{ reqList }}</b><br>
 
         <!--- ACHIEVEMENTS --->
         <b>{{ achievements }}</b> achievements for <b>{{ achpot }}</b> achievement points<br>
 
         <!--- QUESTS --->
-        <b>{{ quests }}</b> quests finished<br>
+        <b class="questfellow">{{ quests }}</b> quests finished<br>
 
         <!--- FRIENDS --->
         <a class="graylink" href="/f/{{ username }}">Friends List</a><br>
