--- a/static/base.css
+++ b/static/base.css
@@ -3,6 +3,7 @@
     position: sticky;
     top: 0; 
     background-color: honeydew;
+    margin: -8px;
 }
 
 .subtitle {
@@ -17,6 +18,7 @@ text-align: center;
 
 .username {
 font-family: 'Inconsolata', monospace;
+margin-top: 40px;
 }
 
 .stats {
@@ -34,7 +36,7 @@ text-align: center;
 }
 
 .table {
-    width:auto;height:35%;line-height:3em;overflow:auto;padding:5px;border:1px solid;margin-right:10%;margin-left:10%;margin-top:50px;
+    width:auto;height:auto;max-height:35%;line-height:3em;overflow:auto;padding:5px;border:1px solid;margin-right:10%;margin-left:10%;margin-top:35px;
     border-radius:10px;
 }
 
@@ -162,6 +164,9 @@ color: darkgray;
 .decentyellow {
     color:#c0c000
 }
+.questfellow {
+    color:rgb(228, 228, 137);
+}
 
 .white{
     color:white
@@ -230,18 +235,18 @@ border-radius: 15px;
 
 .columnZ {
     float: left;
-    width: 25%;
+    width: 22%;
     margin-top: 15px;
 }
 
 .columnA {
     float: left;
-    width: 45%;
+    width: 50%;
 }
 
 .columnB {
     float: left;
-    width: 30%;
+    width: 28%;
 }
 
 /* Clear floats after the columns */
@@ -310,4 +315,30 @@ border-top: none;
 
 .graylink {
     color: black;
+}
+
+input {
+    height: 35px;
+    width: 20%;
+    font-size: auto;
+    margin-bottom: 5px;
+    border: darkgray solid 2px;
+    font-family: 'Inter';
+    border-radius: 10px;
+    text-align: center;
+}
+
+.searchbutton{
+    background-color:transparent;
+    border-color:transparent;
+    height:35px;
+    width:35px;
+    cursor:pointer;
+}
+
+
+
+
+#loadOverlay {
+    display: none;
 }
