--- a/templates/index.html
+++ b/templates/index.html
@@ -1,32 +1,36 @@
 <meta charset="UTF-8">
+
 <html>
 	<link rel="shortcut icon" type="image/jpg" href="https://i.ibb.co/sw3P3zZ/tiramis2.png"/>
-
+	<div id="loadOverlay" style="background-color:#fff; position:absolute; top:0px; left:0px; width:100%; height:100%; z-index:2000;"></div>
 	<div class="logo">
         <a href='/'><img src='https://gist.githubusercontent.com/literaiiy/29ee460b0eff572d439688d0236e6382/raw/3c289102814fab69f09bb51df0cc88e6afe16341/tiramisulogo.svg' alt="Tiramisu Logo" height='8%' width='auto'></a>
+		<form action="/" method="POST">
+			<input type="text" name="content" id="content" autofocus="autofocus" onfocus="this.select()" autocomplete="off" placeholder="Search username or UUID">
+			<script>
+				if ( window.history.replaceState ) {
+				  window.history.replaceState( null, null, window.location.href );
+				}
+			</script>
+			<input class="searchbutton" type="submit" value ="Q">
+		</form>
     </div>
+	<link href="{{ url_for('static', filename='base.css') }}" rel="stylesheet" type="text/css">
 	{% block head %}
 	<title>Tiramisu - Name History and Hypixel Stats</title>
-	<link href="{{ url_for('static', filename='index.css') }}" rel="stylesheet" type="text/css">
 	{% endblock %}
 
 	{% block content %}
 	<body>
-		<hr>
-		<form action="/" method="POST">
-			<input type="text" name="content" id="content">
-			<input type="submit" value ="Search">
-		</form>
-		<hr>
 		<img src='https://i.imgur.com/d8RMyh6.png'>
 	</body>
 	{% endblock %}
 
 <div class="end">
 	<hr>
-		<p>Tiramisu <b>v{{ version }} "{{ codename }}"</b> - <b>{{ tiramisudate }}</b> · 
-		Flask <b>v{{ flaskver }}</b> · 
-		Python <b>v{{ pythonver }}</b><p>
-	<p>Copyright © 2021 <a href='/p/floraphile'>floraphile</a>. All rights reserved. Terms of Service. Privacy Policy.</p>
+		<p>Tiramisu <b>v0.0.1α "Flour" (Testing Phase)</b> - February 18th, 2021 · 
+		Flask <b>v1.1.2</b> · 
+		Python <b>v3.7.9</b><p>
+	<p>Copyright © 2021 <a style='text-decoration:none;' href='/p/floraphile'>floraphile</a>. All rights reserved. Terms of Service. Privacy Policy.</p>
 	</div>
 </html>
