--- a/templates/friends.html
+++ b/templates/friends.html
@@ -15,7 +15,7 @@
         </tr>
         {% for item in friendListList %}
         <tr>
-            <td> {{ item }}<br></td>
+            <td><a href="/p/{{ item }}"> {{ item }}</a><br></td>
             <td> Added on {{ friendListList[item][1] }}, initiated by {{ friendListList[item][0] }}<br></td>
         </tr>
         {% endfor %}
