--- a/static/base.css
+++ b/static/base.css
@@ -21,6 +21,10 @@ font-family: 'Inconsolata', monospace;
 margin-top: 40px;
 }
 
+.uuid {
+    margin-bottom: 35px;
+}
+
 .stats {
 font-family: 'Inter';
 text-align: center;
@@ -299,15 +303,15 @@ border-top: none;
 }
 
 .swgeneral {
-    width:500px;
+    width:auto;
 }
 
 .leftsw {
-    width: 100vw;
+    width: auto;
 }
 
 .rightsw {
-    width: 100vw;
+    width: auto;
 }
 
 .graylink {
@@ -333,9 +337,51 @@ input {
     cursor:pointer;
 }
 
+/* The Modal (background) */
+.modal {
+display: none; /* Hidden by default */
+position: fixed; /* Stay in place */
+z-index: 1; /* Sit on top */
+left: 0;
+top: 0;
+width: 100%; /* Full width */
+height: 100%; /* Full height */
+overflow: auto; /* Enable scroll if needed */
+background-color: rgb(0,0,0); /* Fallback color */
+background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+background-color: #fefefe;
+margin: 15% auto;
+padding: 20px;
+border: 1px solid #888;
+width: 25%; /* Could be more or less, depending on screen size */
+align-content: center;
+border-radius: 15px;
+}
+
+.loader {
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+    margin-left: auto;
+    margin-right: auto;
+}
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
 
 
 
 #loadOverlay {
     display: none;
 }
+
