--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,13 @@
 {% extends "index.html" %}
 
-<link rel="shortcut icon" type="image/jpg" href="https://i.ibb.co/sw3P3zZ/tiramis2.png"/>
+
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Meddon&display=swap" rel="stylesheet">
 
 {% block head %}
+<link rel='shortcut icon' type='image/jpg' href='https://assets.geekinsider.com/2020/06/image1-4.jpeg'/>
 <title>Profile for {{ displayname }} | Tiramisu</title>
 <link href="{{ url_for('static', filename='base.css') }}" rel="stylesheet" type="text/css">
 <!--- HEADER --->
@@ -116,27 +117,6 @@
         <!--- QUESTS --->
         <b class="questfellow">{{ quests }}</b> quests finished<br>
 
-        <!--- FRIENDS --->
-        <button id='myBtn' href="/f/{{ username }}">Friends List</button><br>
-        <div id="myModal" class="modal">
-        <script>
-        var modal = document.getElementById("myModal");
-        // Get the button that opens the modal
-        var btn = document.getElementById("myBtn");
-
-        // Get the <span> element that closes the modal
-        var span = document.getElementsByClassName("close")[0];
-
-        // When the user clicks on the button, open the modal
-        btn.onclick = function() {modal.style.display = "block"; window.location.replace('/f/{{ username }}')}
-        </script>
-
-        <div class="modal-content">
-        <div class="loader"></div>
-        <p>Friends list loading. It may take longer or shorter depending on the amount of friends you have. TEST</p>
-        </div>
-        </div>
-        
         <!--- GUILD --->
         {% if guildList[0] != 0 %}
             <b>{{ guildList[2] }}</b> in guild <b><a class="graylink" href="/g/{{ username }}">{{ guildList[1] }}</a> <span class='{{ guildList[3] }}'>[{{ guildList[0] }}]<span></b></p>
@@ -198,6 +178,26 @@
         {% if youtube != [] %}
             <span class="youtube"><b>YouTube: </b></span><a href='{{ youtube[1] }}'>{{ youtube[0] }}</a><br>
         {% endif %}
+        <!--- FRIENDS --->
+        <button id='myBtn' href="/f/{{ username }}">Friends List</button><br>
+        <div id="myModal" class="modal">
+        <script>
+        var modal = document.getElementById("myModal");
+        // Get the button that opens the modal
+        var btn = document.getElementById("myBtn");
+
+        // Get the <span> element that closes the modal
+        var span = document.getElementsByClassName("close")[0];
+
+        // When the user clicks on the button, open the modal
+        btn.onclick = function() {modal.style.display = "block"; window.location.replace('/f/{{ username }}')}
+        </script>
+
+        <div class="modal-content">
+        <div class="loader"></div>
+        <p>Friends list loading. It may take longer or shorter depending on the amount of friends you have. TEST</p>
+        </div>
+        </div>
         </div>
     </div>
 </div>
