--- a/templates/base.html
+++ b/templates/base.html
@@ -1,24 +1,21 @@
 {% extends "index.html" %}
 
+{% block head %}
+<link rel='icon' href='https://mc-heads.net/head/{{ uuid }}'/>
+<title>Profile for {{ displayname }} | Tiramisu</title>
+<link href="{{ url_for('static', filename='base.css') }}" rel="stylesheet" type="text/css">
+{% endblock %}
 
+<!--- HEADER --->
+<header>
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Meddon&display=swap" rel="stylesheet">
-
-{% block head %}
-<link rel='shortcut icon' type='image/jpg' href='https://assets.geekinsider.com/2020/06/image1-4.jpeg'/>
-<title>Profile for {{ displayname }} | Tiramisu</title>
-<link href="{{ url_for('static', filename='base.css') }}" rel="stylesheet" type="text/css">
-<!--- HEADER --->
-<header>
-{% endblock %}
-
-{% block content %}
-<!--- SUBTITLE --->
 </header>
-<body>
 
+<!--- SUBTITLE --->
+<body>
 <!--- USERNAME --->
 <div class="username">
     {% if '+++' in rank %}
@@ -39,6 +36,8 @@
     {{ uuid }}
 </div>
 <hr>
+
+{% block content %}
 <!--- help --->
 <style> 
     body { 
