--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,11 @@
 <meta charset="UTF-8">
-<link rel="shortcut icon" type="image/jpg" href="/icon.ico"/>
+
+{% block head %}
+<link rel="icon" href="https://srv-store3.gofile.io/download/coUjuY/tiramisu.ico"/>
+<title>Tiramisu - Name History and Hypixel Stats</title>
+{% endblock %}
+
+
 <div id="loadOverlay" style="background-color:#fff; position:absolute; top:0px; left:0px; width:100%; height:100%; z-index:2000;"></div>
 <div class="logo">
 	<a href='/'><img src='https://gist.githubusercontent.com/literaiiy/29ee460b0eff572d439688d0236e6382/raw/3c289102814fab69f09bb51df0cc88e6afe16341/tiramisulogo.svg' alt="Tiramisu Logo" height='8%' width='auto'></a>
@@ -14,11 +20,6 @@
 	</form>
 </div>
 <link href="{{ url_for('static', filename='base.css') }}" rel="stylesheet" type="text/css">
-{% block head %}
-
-<title>Tiramisu - Name History and Hypixel Stats</title>
-{% endblock %}
-
 {% block content %}
 
 <body>
