SLIGHTLY UNSTABLE - bug with search bar? Can't seem to replicate after a while- search bar seems to not search

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,10 @@
 <meta charset="UTF-8">
 
 {% block head %}
-<link rel="icon" href="https://srv-store3.gofile.io/download/coUjuY/tiramisu.ico"/>
+<head>
+<link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
 <title>Tiramisu - Name History and Hypixel Stats</title>
+</head>
 {% endblock %}
 
 
