--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block head %}
 <head>
-<link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
+<link rel="icon" href="{{ url_for('static', filename='tiramisu.ico') }}">
 <title>Tiramisu - Name History and Hypixel Stats</title>
 </head>
 {% endblock %}
